fix: align close button and title of modal - Issue #56

--- a/src/presentation/components/modal/modal.module.css
+++ b/src/presentation/components/modal/modal.module.css
@@ -52,13 +52,15 @@
     font-weight: 700;
     line-height: 1;
     color: #000;
-    opacity: 0.3;
+    opacity: 0.7;
     cursor: pointer;
     border: none;
+    background-color: transparent;
 }
 
 .modal-title {
     color: var(--primary);
+    margin-bottom: -10px;
 }
 
 .address-content {
